[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Puzzle Pier/Space Invaders Intro.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/Area_Specific/Minigame/Space_Quest.gd" type="Script" id=2]
[ext_resource path="res://UI/Star Deco.png" type="Texture" id=3]
[ext_resource path="res://Misc/Font/SaveStar.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Puzzle Pier/Space_Quest/Moon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Puzzle Pier/Minigame_Item.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Puzzle Pier/Space_Quest/Aliens SS.png" type="Texture" id=7]
[ext_resource path="res://Assets/Puzzle Pier/Space_Quest/Space Background.jpg" type="Texture" id=8]
[ext_resource path="res://Assets/Puzzle Pier/Space_Quest/Spaceship SS.png" type="Texture" id=9]

[sub_resource type="DynamicFontData" id=9]
antialiased = false
font_path = "res://Misc/Font/Greenscr.ttf"

[sub_resource type="DynamicFont" id=6]
size = 14
outline_size = 2
outline_color = Color( 0.42, 0.26348, 0.2016, 1 )
extra_spacing_space = -3
font_data = SubResource( 9 )

[sub_resource type="DynamicFont" id=10]
size = 14
outline_size = 3
outline_color = Color( 0.843137, 0.129412, 0.211765, 1 )
extra_spacing_space = -3
font_data = SubResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 14
outline_size = 3
outline_color = Color( 0.137255, 0.372549, 0.745098, 1 )
extra_spacing_space = -3
font_data = SubResource( 9 )

[sub_resource type="DynamicFont" id=12]
size = 14
outline_size = 3
outline_color = Color( 0.14902, 0.556863, 0.34902, 1 )
extra_spacing_space = -3
font_data = SubResource( 9 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "flash"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.6 ]
}

[node name="Space_Quest" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Intro" type="Node2D" parent="."]

[node name="Screen" type="Sprite" parent="Intro"]
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="Intro"]
margin_left = -151.0
margin_top = -227.0
margin_right = 154.0
margin_bottom = -192.0
custom_colors/font_color = Color( 1, 0.990833, 0.95, 1 )
custom_colors/font_color_shadow = Color( 0.25, 0.159042, 0.1025, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Space Quest"
align = 1

[node name="Instruction" type="Label" parent="Intro"]
margin_left = -132.0
margin_top = -66.0
margin_right = 148.0
margin_bottom = 261.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 6 )
text = "Use (Right) and (Left) to move the spaceship

Press (Shift) or (Z) to fire projectiles at enemies"
align = 1
autowrap = true

[node name="1st" type="Label" parent="Intro"]
margin_left = -278.0
margin_top = 68.0
margin_right = 2.0
margin_bottom = 395.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 10 )
text = "1st"
align = 1
autowrap = true

[node name="2nd" type="Label" parent="Intro"]
margin_left = -141.0
margin_top = 68.0
margin_right = 139.0
margin_bottom = 395.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 11 )
text = "2nd"
align = 1
autowrap = true

[node name="3rd" type="Label" parent="Intro"]
margin_left = -4.0
margin_top = 68.0
margin_right = 276.0
margin_bottom = 395.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 12 )
text = "3rd"
align = 1
autowrap = true

[node name="Points1" type="Label" parent="Intro"]
margin_left = -276.0
margin_top = 185.0
margin_right = 4.0
margin_bottom = 512.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 6 )
text = "500pts"
align = 1
autowrap = true

[node name="Points2" type="Label" parent="Intro"]
margin_left = -138.0
margin_top = 185.0
margin_right = 142.0
margin_bottom = 512.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 6 )
text = "250pts"
align = 1
autowrap = true

[node name="Points3" type="Label" parent="Intro"]
margin_left = -1.0
margin_top = 185.0
margin_right = 279.0
margin_bottom = 512.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 6 )
text = "100pts"
align = 1
autowrap = true

[node name="Item1" parent="Intro" instance=ExtResource( 6 )]
position = Vector2( -140, 131 )

[node name="Item2" parent="Intro" instance=ExtResource( 6 )]
position = Vector2( -4.00003, 131 )

[node name="Item3" parent="Intro" instance=ExtResource( 6 )]
position = Vector2( 134, 131 )

[node name="Stars" type="Node2D" parent="Intro"]
position = Vector2( 0, -2 )

[node name="StarDeco" type="Sprite" parent="Intro/Stars"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( -176, -105 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="StarDeco2" type="Sprite" parent="Intro/Stars"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( -88, -105 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="StarDeco3" type="Sprite" parent="Intro/Stars"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( 0, -105 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="StarDeco4" type="Sprite" parent="Intro/Stars"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( 88, -105 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="StarDeco5" type="Sprite" parent="Intro/Stars"]
modulate = Color( 0.95, 0.95, 0.95, 1 )
position = Vector2( 176, -105 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="Game" type="Node2D" parent="."]

[node name="Space" type="Sprite" parent="Game"]
modulate = Color( 0.984314, 0.964706, 0.980392, 1 )
texture = ExtResource( 8 )

[node name="Moon" type="Sprite" parent="Game"]
position = Vector2( 0, 243 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Game"]
position = Vector2( -86, -191 )
texture = ExtResource( 7 )
hframes = 6

[node name="Sprite2" type="Sprite" parent="Game"]
position = Vector2( 142, -112 )
texture = ExtResource( 7 )
hframes = 6
frame = 2

[node name="Sprite3" type="Sprite" parent="Game"]
position = Vector2( -222, -55 )
texture = ExtResource( 7 )
hframes = 6
frame = 4

[node name="Sprite4" type="Sprite" parent="Game"]
position = Vector2( -4.23516e-22, 205 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 9 )
hframes = 2
frame = 1

[node name="Score" type="Label" parent="Game"]
margin_left = 117.0
margin_top = 257.0
margin_right = 397.0
margin_bottom = 584.0
custom_constants/line_spacing = 9
custom_fonts/font = SubResource( 6 )
text = "Score: 500"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.6
anims/RESET = SubResource( 3 )
anims/flash = SubResource( 5 )
anims/open = SubResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -320.0
margin_top = -280.0
margin_right = 320.0
margin_bottom = 280.0
color = Color( 0, 0, 0, 1 )
